--- a/WikiLeaks/MainWindow.xaml
+++ b/WikiLeaks/MainWindow.xaml
@@ -26,10 +26,10 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="30" />
+            <RowDefinition Height="48" />
         </Grid.RowDefinitions>
         <Border BorderThickness="2" CornerRadius="3" BorderBrush="Black">
-            <WebBrowser x:Name="WebBrowser" local:WebBrowserBehaviors.Html="{Binding HtmlString}" />
+            <WebBrowser x:Name="WebBrowser" local:WebBrowserBehaviors.Html="{Binding HtmlString}" LoadCompleted="WebBrowser_OnLoadCompleted" />
         </Border>
         <ListBox x:Name="FileList" Grid.Row="1" ItemsSource="{Binding Attachments}" >
             <ListBox.ItemsPanel>
@@ -49,18 +49,18 @@
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
-        <Grid Grid.Row="2" Background="Azure">
+        <Grid Grid.Row="2" Background="Azure" >
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="0"/>
                 <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="48"/>
+                <ColumnDefinition Width="48"/>
+                <ColumnDefinition Width="48"/>
+                <ColumnDefinition Width="48"/>
             </Grid.ColumnDefinitions>
-            <TextBox Grid.Column="0" IsReadOnly="True" Text="{Binding Mode=OneWay, Path=Url}" FontWeight="Bold" VerticalAlignment="Center"/>
-            <xctk:IntegerUpDown Grid.Column="2" Text="{Binding Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Path=DocumentNo}" Padding="2" Margin="2" />
+            <TextBox Grid.Column="0" Height="48" IsReadOnly="True" FontSize="18" Text="{Binding Mode=OneWay, Path=Url}" FontWeight="Bold" VerticalContentAlignment="Center"/>
+            <xctk:IntegerUpDown Grid.Column="2" FontSize="18" FontWeight="Bold" Value="{Binding DocumentNo}" Padding="2" Margin="2" />
             <Button Grid.Column="3" Content="{StaticResource Wikileaks}" Command="{Binding WikileaksCommand}" Padding="2" Margin="2"/>
             <Button Grid.Column="4" Content="{StaticResource Refresh}" Command="{Binding RefreshCommand}" Padding="2" Margin="2"/>
             <Button Grid.Column="5" Content="{StaticResource Prev}" Command="{Binding PreviousCommand}" Padding="2" Margin="2"/>
