--- a/WikiLeaks/App.xaml
+++ b/WikiLeaks/App.xaml
@@ -1,10 +1,12 @@
 ﻿<Application x:Class="WikiLeaks.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:WikiLeaks"
              Exit="Application_Exit"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <Style x:Name="Heading" TargetType="{x:Type Label}">
+            <Setter Property="HorizontalContentAlignment" Value="Left" />
+            <Setter Property="VerticalContentAlignment" Value="Top" />
+        </Style>
     </Application.Resources>
 </Application>
