--- a/WikiLeaks/App.xaml
+++ b/WikiLeaks/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="WikiLeaks.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             Exit="Application_Exit"
-             StartupUri="MainWindow.xaml">
+             Exit="Application_Exit">
     <Application.Resources>
         <Style x:Name="Heading" TargetType="{x:Type Label}">
             <Setter Property="HorizontalContentAlignment" Value="Left" />
