Starting to add a Settings dialog.

--- a/WikiLeaks/MainWindow.xaml
+++ b/WikiLeaks/MainWindow.xaml
@@ -59,7 +59,9 @@
             <Label Content="From:" />
             <TextBlock Text="{Binding From}" Grid.Row="0" Grid.Column="1" />
             <Label Content="To:" Grid.Row="1" Grid.Column="0" />
-            <TextBlock Text="{Binding To}" Grid.Row="1" Grid.Column="1" />
+            <ScrollViewer Grid.Row="1" Grid.Column="1" MaxHeight="200">
+                <TextBlock Text="{Binding To}" />
+            </ScrollViewer>
             <Label Content="CC:" Grid.Row="2" Grid.Column="0" />
             <TextBlock Text="{Binding Cc}" Grid.Row="2" Grid.Column="1" />
             <Label Content="Subject:" Grid.Row="3" Grid.Column="0" />
@@ -68,9 +70,24 @@
             <TextBlock Text="{Binding Date}" Grid.Row="4" Grid.Column="1" />
         </Grid>
 
-        <Border Grid.Row="1" BorderThickness="2" CornerRadius="3" BorderBrush="Black">
-            <WebBrowser x:Name="WebBrowser" extensions1:WebBrowserBehaviors.Html="{Binding HtmlString}" LoadCompleted="WebBrowser_OnLoadCompleted" />
-        </Border>
+        <TabControl Grid.Row="1" Margin="5">
+
+            <TabControl.Resources>
+                <Style TargetType="{x:Type TabItem}">
+                    <Setter Property="FontWeight" Value="Bold"/>
+                    <Setter Property="FontSize" Value="14"/>
+                </Style>
+            </TabControl.Resources>
+
+            <TabItem Header="Formatted HTML">
+                <WebBrowser x:Name="WebBrowser" extensions1:WebBrowserBehaviors.Html="{Binding HtmlString}" LoadCompleted="WebBrowser_OnLoadCompleted" />
+            </TabItem>
+            <TabItem Header="Raw Text">
+                <ScrollViewer>
+                    <TextBlock Text="{Binding HtmlString}" FontWeight="Normal"/>
+                </ScrollViewer>
+            </TabItem>
+        </TabControl>
         
         <ListBox Grid.Row="2" ItemsSource="{Binding Attachments}" >
             <ListBox.ItemsPanel>
@@ -102,6 +119,7 @@
                 <ColumnDefinition Width="48"/>
                 <ColumnDefinition Width="48"/>
                 <ColumnDefinition Width="48"/>
+                <ColumnDefinition Width="48"/>
             </Grid.ColumnDefinitions>
 
             <Grid.Resources>
@@ -113,10 +131,11 @@
 
             <TextBox Grid.Column="0" Height="48" IsReadOnly="True" FontSize="18" Text="{Binding Mode=OneWay, Path=Url}" FontWeight="Bold" VerticalContentAlignment="Center" Background="{Binding SignatureValidation, Converter={StaticResource SignatureValidationToColorConverter}}" />
             <xctk:IntegerUpDown Grid.Column="2" FontSize="18" FontWeight="Bold" Value="{Binding DocumentNo}" Padding="2" Margin="2" />
-            <Button Grid.Column="3" Content="{StaticResource Wikileaks}" Command="{Binding WikileaksCommand}" />
-            <Button Grid.Column="4" Content="{StaticResource Refresh}" Command="{Binding RefreshCommand}" />
-            <Button Grid.Column="5" Content="{StaticResource Prev}" Command="{Binding PreviousCommand}" />
-            <Button Grid.Column="6" Content="{StaticResource Next}" Command="{Binding NextCommand}" />
+            <Button Grid.Column="3" Content="{StaticResource Wikileaks}" Command="{Binding SettingsCommand}" />
+            <Button Grid.Column="4" Content="{StaticResource Wikileaks}" Command="{Binding WikileaksCommand}" />
+            <Button Grid.Column="5" Content="{StaticResource Refresh}" Command="{Binding RefreshCommand}" />
+            <Button Grid.Column="6" Content="{StaticResource Prev}" Command="{Binding PreviousCommand}" />
+            <Button Grid.Column="7" Content="{StaticResource Next}" Command="{Binding NextCommand}" />
         </Grid>
     </Grid>
 </Window>
