--- a/WikiLeaks/Dialogs/SettingsDialog.xaml
+++ b/WikiLeaks/Dialogs/SettingsDialog.xaml
@@ -5,12 +5,12 @@
       	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       	xmlns:viewModels="clr-namespace:WikiLeaks.ViewModels"
       	mc:Ignorable="d" 
-        Title="{Binding Title}"
+        Title="Settings"
         WindowStartupLocation="CenterScreen"
         Height="537.712" 
         Width="919.64"
         FontSize="16"
-        d:DataContext ="{d:DesignInstance {x:Type viewModels:SettingsViewModel}, IsDesignTimeCreatable=True}"  
+        d:DataContext ="{d:DesignInstance {x:Type viewModels:SettingsViewModel}, IsDesignTimeCreatable=True}" ResizeMode="NoResize" Topmost="True"  
         >
 
     <Window.Resources>
@@ -41,43 +41,88 @@
         <Grid Margin="0">
 
             <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
                 <RowDefinition Height="*" />
-                <RowDefinition Height="Auto" />
+                <RowDefinition Height="50" />
             </Grid.RowDefinitions>
-            <GroupBox Grid.Row="0" Grid.Column="0" Header="Email Source">
-                <Grid Margin="0">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="190" />
-                        <ColumnDefinition Width="*" />
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
-                    </Grid.RowDefinitions>
-                    <Label Content="Domain:" Grid.Row="0" />
-                    <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding Domain}" />
-                    <Label Content="Repository:" Grid.Row="1" Grid.Column="0" />
-                    <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding Repository}" />
-                </Grid>
-            </GroupBox>
-            <Grid Grid.Row="9" HorizontalAlignment="Right">
+
+
+            <Grid Grid.Row="0" >
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="107*"/>
+                    <ColumnDefinition Width="185*"/>
+                </Grid.ColumnDefinitions>
+
+                <GroupBox Grid.Column="0" Header="Highlighted Words" >
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="6*"/>
+                            <RowDefinition Height="1*"/>
+                            <RowDefinition Height="1*"/>
+                            <RowDefinition Height=".6*"/>
+                        </Grid.RowDefinitions>
+
+                        <ListBox Grid.Row="0" ItemsSource="{Binding SearchTerms}" SelectedItem="{Binding SelectedSearchTerm}" IsSynchronizedWithCurrentItem="True"/>
+
+                        <Grid Grid.Row="1">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="2*"/>
+                                <ColumnDefinition Width="1*"/>
+                            </Grid.ColumnDefinitions>
+
+                            <TextBox Text="{Binding SearchTerm}" Grid.Column="0" />
+                            <Button Content="Add" Command="{Binding AddTerm}" Grid.Column="1" FontSize="16" />
+                        </Grid>
+
+
+
+                        <Grid Grid.Row="2">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition/>
+                                <ColumnDefinition/>
+                            </Grid.ColumnDefinitions>
+                            <Button Content="Reset" Command="{Binding ResetTerms}" Grid.Column="0" FontSize="16" />
+                            <Button Content="Delete" Command="{Binding RemoveTerm}" Grid.Column="1" FontSize="16" />
+                        </Grid>
+                        <Label Grid.Row="3" Content="**Warning: Search terms may break HTML formatting." FontSize="12" FontWeight="Normal"/>
+
+
+                    </Grid>
+                </GroupBox>
+
+
+                <GroupBox Grid.Row="0" Grid.Column="1" Header="Email Source" Height="156" VerticalAlignment="Top">
+                    <Grid Margin="0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="190" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                        </Grid.RowDefinitions>
+                        <Label Content="Domain:" Grid.Row="0" />
+                        <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding Domain}" />
+                        <Label Content="Repository:" Grid.Row="1" Grid.Column="0" />
+                        <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding Repository}" />
+                    </Grid>
+                </GroupBox>
+
+
+            </Grid>
+
+
+
+
+            <Grid Grid.Row="2" HorizontalAlignment="Right">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="100" />
                     <ColumnDefinition Width="100" />
                 </Grid.ColumnDefinitions>
                 <Button Content="Ok" IsDefault="True" Grid.Column="0" Command="{Binding SaveChanges}"/>
-                <Button Content="Cancel" IsCancel="True" Grid.Column="1"/>
+                <Button Content="Cancel" IsCancel="True" Grid.Column="1" />
             </Grid>
 
         </Grid>
