--- a/WikiLeaks/Dialogs/HighlightDialog.xaml
+++ b/WikiLeaks/Dialogs/HighlightDialog.xaml
@@ -1,17 +1,18 @@
-﻿<Window x:Class="WikiLeaks.Dialogs.FiltersDialog"
+﻿<Window x:Class="WikiLeaks.Dialogs.HighlightDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       	xmlns:viewModels="clr-namespace:WikiLeaks.ViewModels"
       	xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
+      	xmlns:models="clr-namespace:WikiLeaks.Models"
       	mc:Ignorable="d" 
-        Title="Search Filters"
+        Title="Highlighted Keywords"
         WindowStartupLocation="CenterScreen"
         Height="537.712" 
         Width="919.64"
         FontSize="16"
-        d:DataContext ="{d:DesignInstance {x:Type viewModels:FiltersViewModel}, IsDesignTimeCreatable=True}"  
+        d:DataContext ="{d:DesignInstance {x:Type viewModels:HighlightViewModel}, IsDesignTimeCreatable=True}"  
         >
 
     <Window.Resources>
@@ -48,34 +49,13 @@
         <Grid Margin="0">
 
             <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
                 <RowDefinition Height="*" />
                 <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
-            <GroupBox Grid.Row="0" Grid.Column="0" Header="Search Filters">
-                <Grid Margin="0">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="190" />
-                        <ColumnDefinition Width="*" />
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
-                    </Grid.RowDefinitions>
-                    <Label Content="Domain:" Grid.Row="0" />
-                </Grid>
-            </GroupBox>
-            <Grid Grid.Row="9" HorizontalAlignment="Right">
+            <xctk:CollectionControl FontWeight="Bold" FontSize="18" ItemsSource="{Binding Highlights}" >
+                
+            </xctk:CollectionControl>
+            <Grid Grid.Row="1" HorizontalAlignment="Right">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="100" />
                     <ColumnDefinition Width="100" />
